using too much effort to fix the typebar

--- a/src/App.css
+++ b/src/App.css
@@ -42,15 +42,25 @@
       border-radius: 200px;
       box-shadow: 1px 3px 10px darkgray;
       background: lightcyan;
+      display: block;
   }
   .input2{
-    top: 10px;
-    left: 80px;
+    /* top: 10px; */
+    left: 80px; 
     width:600px;
+    overflow-wrap: break-word;
+    word-break: break-all;
   }
   .chat_background{
-      position: absolute;
+      position: fixed;
+      top: 0px;
+      left: 0px;
       width: 100%;
       height: 100%;
       background: azure;
   }
+  /* .input_holder_2{
+      position: absolute;
+      bottom: 20px;
+      height: 20px;
+  } */
